# search_mcp_demo

./: .env.example  .gitignore  README.md  claude_mcp_search_demo.py  llm_search_mcp_demo.py  openai_mcp_search_demo.py  pyproject.toml  run_server.py  test_server.py
search_mcp_pkg/: __init__.py  claude_search_mcp_demo.py  client.py  core.py
