[tool.poetry]
name = "search_mcp_pkg"
version = "0.1.0"
description = "MCP demo for keyword search with Elasticsearch and LLM query planning"
authors = ["Kevin Zhao <kevinhfzhao@gmail.com>"]
readme = "README.md"
packages = [
    {include = "search_mcp_pkg"}
]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10"
mcp = {extras = ["cli"], version = ">=1.4.1,<2.0.0"}
elasticsearch = ">=8.17.2,<9.0.0"
openai = ">=1.66.3,<2.0.0"
python-dotenv = ">=1.0.1,<2.0.0"
faker = ">=37.0.0,<38.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
